youtube player update

--- a/PracticeApp/www/index.html
+++ b/PracticeApp/www/index.html
@@ -20,7 +20,7 @@
       <div id="overlay">
         <div id="modal">
           <span class="close">X</span>
-          <iframe width="650" height="405" src="" frameborder="0" allowfullscreen id="frame"></iframe>
+          <iframe width="970" height="700" src="" frameborder="0" id="frame"></iframe>
         </div>
       </div>
       <div class="swiper-wrapper">
@@ -63,7 +63,7 @@
                 <li class="view-more">
                   View More...
                 </li>
-                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/UNuzDpu2tIY');">
+                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/UNuzDpu2tIY?rel=0&autoplay=1&showinfo=0&controls=2');">
               </ul>
             </div>
             <div class="col-6">
@@ -113,7 +113,7 @@
                 <li class="view-more">
                   View More...
                 </li>
-                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/JUfUV8_g3rY');">
+                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/JUfUV8_g3rY?rel=0&autoplay=1&showinfo=0&controls=2');">
               </ul>
             </div>
             <div class="col-6">
@@ -163,7 +163,7 @@
                 <li class="view-more">
                   View More...
                 </li>
-                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/DZGi6coESYc');">
+                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/DZGi6coESYc?rel=0&autoplay=1&showinfo=0&controls=2');">
               </ul>
             </div>
             <div class="col-6">
@@ -213,7 +213,7 @@
                 <li class="view-more">
                   View More...
                 </li>
-                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/W7HlhCBPlDA');">
+                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/W7HlhCBPlDA?rel=0&autoplay=1&showinfo=0&controls=2');">
               </ul>
             </div>
             <div class="col-6">
