--- a/PracticeApp/www/index.html
+++ b/PracticeApp/www/index.html
@@ -63,7 +63,7 @@
                 <li class="view-more">
                   View More...
                 </li>
-                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/UNuzDpu2tIY?rel=0&autoplay=1&showinfo=0&controls=2');">
+                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/-rsdsKBgdJo?rel=0&autoplay=1&showinfo=0&controls=2');">
               </ul>
             </div>
             <div class="col-6">
