screensavers complete for exhibit 1

--- a/PracticeApp/www/index.html
+++ b/PracticeApp/www/index.html
@@ -7,10 +7,7 @@
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-        <script
-            src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-            integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-            crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
         <!-- Link Swiper's CSS -->
         <link rel="stylesheet" href="css/swiper.css">
         <link rel="stylesheet" href="css/styles.css">
@@ -23,10 +20,10 @@
             <div id="screensaver">
                 <div class="slideShowContainer">
                     <ul class="slideShow">
-                        <li><img src="media/slide1.jpg"></li>
-                        <li><img src="media/slide2.jpg"></li>
-                        <li><img src="media/slide3.jpg"></li>
-                        <li><img src="media/slide4.jpg"></li>
+                        <li><img src="media/slide1.png"></li>
+                        <li><img src="media/slide2.png"></li>
+                        <li><img src="media/slide3.png"></li>
+                        <li><img src="media/slide4.png"></li>
                     </ul>
                 </div>
             </div>
@@ -275,7 +272,7 @@
         <script>
             var mousetimeout;
               var screensaver_active = false;
-              var idletime = 20;
+              var idletime = 60;
               var slides = $('.slideShow > li');
               var slideCount = 0;
               var totalSlides = slides.length;
