--- a/PracticeApp/www/screensavers/BBPRO2-screensaver.html
+++ b/PracticeApp/www/screensavers/BBPRO2-screensaver.html
@@ -4,12 +4,12 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <style>
         body{
             height: 768px;
             width: 1024px;
-            background: url("media/background2.png") no-repeat;
+            background: url("../media/background2.png") no-repeat;
             font-family: 'Lato', sans-serif;
         }
         #footer{
@@ -49,7 +49,7 @@
     <body>
         <div class="row">
                 <div class="col-6">
-                    <img src="media/product-0.png" class="prodImg">
+                    <img src="../media/product-0.png" class="prodImg">
                 </div>
                 <div class="col-6">
                     <div class="text-screensaver">
