--- a/EBC App/www/exhibit3.html
+++ b/EBC App/www/exhibit3.html
@@ -10,7 +10,7 @@
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
         <!-- Link Swiper's CSS -->
         <link rel="stylesheet" href="css/swiper.css">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/style_exhibit1.css">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     </head>
@@ -20,10 +20,10 @@
             <div id="screensaver">
                 <div class="slideShowContainer">
                     <ul class="slideShow">
-                        <li><img src="media/slide1.png"></li>
-                        <li><img src="media/slide2.png"></li>
-                        <li><img src="media/slide3.png"></li>
-                        <li><img src="media/slide4.png"></li>
+                        <li><img src="media/exhibit1/slide1.png"></li>
+                        <li><img src="media/exhibit1/slide2.png"></li>
+                        <li><img src="media/exhibit1/slide3.png"></li>
+                        <li><img src="media/exhibit1/slide4.png"></li>
                     </ul>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <img src="media/product-0.png" class="prodImg">
+                                        <img src="media/exhibit1/product-0.png" class="prodImg">
                                     </div>
                                     <div id="spot1" class="spot" style="display:none"></div>
                                     <div id="spot2" class="spot" style="display:none"></div>
@@ -137,7 +137,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <img src="media/product-1.png" id="bbfit" class="prodImg">
+                                        <img src="media/exhibit1/product-1.png" id="bbfit" class="prodImg">
                                     </div>
                                     <div id="spot4" class="spot" style="display:none"></div>
                                     <div id="spot5" class="spot" style="display:none"></div>
@@ -194,7 +194,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <img src="media/product-2.png" class="prodImg">
+                                        <img src="media/exhibit1/product-2.png" class="prodImg">
                                     </div>
                                     <div id="spot7" class="spot" style="display:none"></div>
                                     <div id="spot8" class="spot" style="display:none"></div>
@@ -208,7 +208,7 @@
                 <div class="swiper-slide" id="container4">
                     <div class="row padded">
                         <div class="col-6">
-                            <div id="main-header" class="header-3">BackBeat PRO+</div>
+                            <div id="main-header" class="header-3">BackBeat PRO + </div>
                             <div id="secondary-header">Bring your music to life.</div>
                             <h3>KEY FEATURES</h3>
                             <ul class="features">
@@ -244,14 +244,13 @@
                                 <li class="view-more">
                                     View More...
                                 </li>
-                                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/W7HlhCBPlDA?rel=0&autoplay=1&showinfo=0&controls=2');">
                             </ul>
                         </div>
                         <div class="col-6">
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <img src="media/product-3.png" class="prodImg">
+                                        <img src="media/exhibit1/product-3.png" class="prodImg">
                                     </div>
                                     <div id="spot10" class="spot" style="display:none"></div>
                                     <div id="spot11" class="spot" style="display:none"></div>
@@ -267,7 +266,7 @@
             <div class="swiper-pagination"></div>
         </div>
         <!-- Swiper JS -->
-        <script src="js/swiper.js"></script>
+        <script src="js/swiper_exhibit1.js"></script>
         <!-- Initialize Swiper -->
         <script>
             var mousetimeout;
