--- a/EBC App/www/screensavers/BBPRO+-screensaver.html
+++ b/EBC App/www/screensavers/BBPRO+-screensaver.html
@@ -4,12 +4,12 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../css/style_exhibit1.css">
         <style>
         body{
             height: 768px;
             width: 1024px;
-            background: url("../media/background4.png") no-repeat;
+            background: url("../media/exhibit1/background4.png") no-repeat;
             font-family: 'Lato', sans-serif;
         }
         #footer4{
@@ -49,7 +49,7 @@
     <body>
         <div class="row">
                 <div class="col-6">
-                    <img src="../media/product-3.png" class="prodImg">
+                    <img src="../media/exhibit1/product-3.png" class="prodImg">
                 </div>
                 <div class="col-6">
                     <div class="text-screensaver">
