--- a/EBC App/www/exhibit2.html
+++ b/EBC App/www/exhibit2.html
@@ -21,8 +21,8 @@
                 <div class="slideShowContainer">
                     <ul class="slideShow">
                         <li><img src="media/exhibit2/slide1.png"></li>
-                        <!--<li><img src="media/exhibit1/slide2.png"></li>
-                        <li><img src="media/exhibit1/slide3.png"></li>-->
+                        <li><img src="media/exhibit2/slide2.png"></li>
+                        <li><img src="media/exhibit2/slide3.png"></li>
                         <li><img src="media/exhibit2/slide4.png"></li>
                     </ul>
                 </div>
@@ -213,32 +213,32 @@
                             <h3>KEY FEATURES</h3>
                             <ul class="features">
                                 <li class="main-feature" id="feature10">
-                                    Bluetooth USB Adapter
+                                    Lightest DECT™ Wireless Headset on the Market
                                     <ul>
-                                        <li>The Class 1 Bluetooth wireless USB adapter brings high fidelity to the standard Bluetooth® experience from computers.</li>
+                                        <li>Manage PC, mobile and desk phone communications with the lightest DECT™ wireless headset on the market</li>
                                     </ul>
                                 </li>
                                 <li class="main-feature" id="feature11">
-                                    Audio Quality 
+                                    Three Comfortable, Customizable Wearing Styles 
                                     <ul>
-                                        <li>The Plantronics signature audio profile delivers a detailed balance of rich bass, crisp highs, and natural midtones from mobile devices, and the Bluetooth USB adapter brings the high-fidelity experience to computers.</li>
+                                        <li>Choose from three comfort-tested and customizable wearing options to match your personal style.</li>
                                     </ul>
                                 </li>
                                 <li class="main-feature" id="feature12">
-                                    Active Noise Canceling (ANC)
+                                    Hot Swappable Battery*
                                     <ul>
-                                        <li>Immerse yourself in music and block out background noise while working, relaxing, and traveling with on-demand active noise-canceling (ANC) technology.</li>
+                                        <li>Hot swappable battery* lets you change battery mid-conversation delivering unlimited talk time. *Additional battery sold separately  </li>
                                     </ul>
                                 </li>
                                 <div class="show-more">
                                     <li class="main-feature">
-                                        24-hour Streaming
+                                        One Intelligent Headset to Manage your PC, Mobile and Desk Phone Calls
                                     </li>
                                     <li class="main-feature">
-                                        Stream up to 100m/330ft
+                                        Wireless Freedom up to 350 feet From Your Desk
                                     </li>
                                     <li class="main-feature">
-                                        Smart Power Management 
+                                        One-Touch Call Answer/end, vol +/-, Mute and Flash Controls Across Devices 
                                     </li>
                                 </div>
                                 <li class="view-more">
@@ -271,7 +271,7 @@
         <script>
             var mousetimeout;
               var screensaver_active = false;
-              var idletime = 10;
+              var idletime = 120;
               var slides = $('.slideShow > li');
               var slideCount = 0;
               var totalSlides = slides.length;
