youtbe video updates and exhibit 3

--- a/EBC App/www/exhibit1.html
+++ b/EBC App/www/exhibit1.html
@@ -73,7 +73,7 @@
                                 <li class="view-more">
                                     View More...
                                 </li>
-                                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/-rsdsKBgdJo?rel=0&autoplay=1&showinfo=0&controls=2');">
+                                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/0HAcFKN6xtc?rel=0&autoplay=1&showinfo=0&controls=2');">
                             </ul>
                         </div>
                         <div class="col-6">
@@ -130,7 +130,7 @@
                                 <li class="view-more">
                                     View More...
                                 </li>
-                                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/JUfUV8_g3rY?rel=0&autoplay=1&showinfo=0&controls=2');">
+                                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/YerlEgHNWdE?rel=0&autoplay=1&showinfo=0&controls=2');">
                             </ul>
                         </div>
                         <div class="col-6">
@@ -187,7 +187,7 @@
                                 <li class="view-more">
                                     View More...
                                 </li>
-                                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/DZGi6coESYc?rel=0&autoplay=1&showinfo=0&controls=2');">
+                                <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/KinhmNmJitE?rel=0&autoplay=1&showinfo=0&controls=2');">
                             </ul>
                         </div>
                         <div class="col-6">
