--- a/EBC App/www/exhibit2.html
+++ b/EBC App/www/exhibit2.html
@@ -215,7 +215,7 @@
                                 <li class="main-feature" id="feature10">
                                     Lightest DECT™ Wireless Headset on the Market
                                     <ul>
-                                        <li>Manage PC, mobile and desk phone communications with the lightest DECT™ wireless headset on the market</li>
+                                        <li>Manage PC, mobile and desk phone communications with the lightest DECT™ wireless headset on the market.</li>
                                     </ul>
                                 </li>
                                 <li class="main-feature" id="feature11">
@@ -227,7 +227,7 @@
                                 <li class="main-feature" id="feature12">
                                     Hot Swappable Battery*
                                     <ul>
-                                        <li>Hot swappable battery* lets you change battery mid-conversation delivering unlimited talk time. *Additional battery sold separately  </li>
+                                        <li>Hot swappable battery* lets you change battery mid-conversation delivering unlimited talk time. *Additional battery sold separately.</li>
                                     </ul>
                                 </li>
                                 <div class="show-more">
