Screensaver UI Fix

--- a/EBC App/www/screensavers/BBFIT-screensaver.html
+++ b/EBC App/www/screensavers/BBFIT-screensaver.html
@@ -15,8 +15,7 @@
         #footer2{
             opacity: 0.5;
             bottom: -99px;
-            height: 175px;
-            left: 1px;
+            height: 175px;;
         }
         .prodImg{
             height: 625px;
