added BB500 to exhibit 1

--- a/EBC App/www/exhibit1.html
+++ b/EBC App/www/exhibit1.html
@@ -221,44 +221,45 @@
                     <div class="row padded">
                         <div class="col-6">
                             <div class="header-text">
-                                <div id="main-header">BackBeat PRO + </div>
-                                <div id="secondary-header">Bring your music to life.</div>
+                                <div id="main-header">BackBeat 500</div>
+                                <div id="secondary-header">Step up to a wireless experience.</div>
                             </div>
                             <div class="features">
                                 <h3>KEY FEATURES</h3>
                                 <ul>
                                     <li class="main-feature" id="feature10">
-                                        Bluetooth USB Adapter
+                                        Multi-device Connectivity
                                         <ul>
-                                            <li>The Class 1 Bluetooth wireless USB adapter brings high fidelity to the standard Bluetooth® experience from computers.</li>
+                                            <li>Multipoint Bluetooth lets you automatically connect up to two devices simultaneously, and pair up to eight.</li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature11">
-                                        Audio Quality 
+                                        Immersive Audio
                                         <ul>
-                                            <li>The Plantronics signature audio profile delivers a detailed balance of rich bass, crisp highs, and natural midtones from mobile devices, and the Bluetooth USB adapter brings the high-fidelity experience to computers.</li>
+                                            <li>Advanced acoustic technology delivers the right balance and deep, rich sound.</li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature12">
-                                        Active Noise Canceling (ANC)
+                                        DeepSleep Mode
                                         <ul>
-                                            <li>Immerse yourself in music and block out background noise while working, relaxing, and traveling with on-demand active noise-canceling (ANC) technology.</li>
+                                            <li>DeepSleep hibernation mode maintains battery charge for up to six months when your headphones are out of range or left on.</li>
                                         </ul>
                                     </li>
                                     <div class="show-more">
                                         <li class="main-feature">
-                                            24-hour Streaming
+                                            Enjoy up to 18 hours of wireless listening
                                         </li>
                                         <li class="main-feature">
-                                            Stream up to 100m/330ft
+                                            Easy on-ear controls
                                         </li>
                                         <li class="main-feature">
-                                            Smart Power Management 
+                                            Memory Foam Earcups
                                         </li>
                                     </div>
                                     <li class="view-more">
                                         View More...
                                     </li>
+                                    <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/fj-tTjIvkl4?rel=0&autoplay=1&showinfo=0&controls=2');">
                                 </ul>
                             </div>
                         </div>
@@ -266,7 +267,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <img src="media/exhibit1/product-3.png" class="prodImg">
+                                        <img src="media/exhibit1/product-3.png" id="bb500">
                                     </div>
                                     <div id="spot10-off" class="spot"></div>
                                     <div id="spot11-off" class="spot"></div>
