--- a/EBC App/www/screensavers/BB500-screensaver.html
+++ b/EBC App/www/screensavers/BB500-screensaver.html
@@ -19,10 +19,10 @@
         }
         .prodImg{
             height: 625px;
-            width: 400px;
+            width: 465px;
             position: absolute;
             z-index: 10;
-            left: 110px;
+            left: 25px;
             top:63px;
 
         }
@@ -49,12 +49,12 @@
     <body>
         <div class="row">
                 <div class="col-6">
-                    <img src="../media/exhibit1/product-4.png" class="prodImg">
+                    <img src="../media/exhibit1/product-3.png" class="prodImg">
                 </div>
                 <div class="col-6">
                     <div class="text-screensaver">
-                        <div id="main-header" class="header-0">BackBeat PRO +</div>
-                        <div id="secondary-header">Bring your music to life.</div>
+                        <div id="main-header" class="header-0">BackBeat 500</div>
+                        <div id="secondary-header">Step up to a wireless experience.</div>
                     </div>
                 </div>
         </div>
